force-app/main/default/objects/Questionnaire__c/Questionnaire__c.object-meta.xml
<CustomObject>
    <description
  >Stores questionnaire configurations for Jungian personality assessments, including introduction text and display settings.</description>
    <label>Questionnaire</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>