force-app/main/default/objects/Questionnaire__c/fields/Introduction_Text__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Text__c</fullName>
    <description
  >Rich text introduction displayed to users before starting the questionnaire, providing guidance and context for the assessment.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Enter introductory text, tips, or instructions that users should read before beginning the questionnaire. Use formatting to highlight important information.</inlineHelpText>
    <label>Introduction Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>