force-app/main/default/objects/Questionnaire__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether this questionnaire is currently active and available for users to complete.</description>
    <inlineHelpText
  >Check this box to make the questionnaire available to users. Uncheck to deactivate it.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>