force-app/main/default/objects/Questionnaire__c/fields/Questions_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>Questions_Per_Page__c</fullName>
    <defaultValue>1</defaultValue>
    <description
  >Configures how many questions are displayed on each page of the questionnaire.</description>
    <inlineHelpText
  >Enter the number of questions to display per page (e.g., 1 for one question at a time, 5 for five questions per page).</inlineHelpText>
    <label>Questions Per Page</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>