force-app/main/default/objects/Questionnaire__c/listViews/all_questionnaires.listView-meta.xml
<ListView>
    <fullName>all_questionnaires</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>all questionnaires</label>
</ListView>